<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="account_information">Account Information</string>
    <string name="add_vehicle">Add Vehicle</string>
    <string name="add_vehicle_tip">"Connect your vehicle 
Enjoy riding"</string>
    <string name="addition_vehicle">Addition of vehicle</string>
    <string name="addressee_email">Addressee:</string>
    <string name="album_name_all">All Media</string>
    <string name="all_folder">All Images</string>
    <string name="all_image">ALL Images</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_version">APP Version</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="area_china">China</string>
    <string name="area_russia">Russia</string>
    <string name="auto_shut_down_title">Set Auto Shut Down Time (min)</string>
    <string name="avatar_customer_service">Customer Service</string>
    <string name="avatar_version">App Version</string>
    <string name="average_speed">Single ride average speed</string>
    <string name="beam_lights">Beam Lights</string>
    <string name="binding_success">Card binding succeeded</string>
    <string name="ble_search_failed">No connectable vehicles found</string>
    <string name="ble_user_guide_1">Please press the vehicle Power Button to power on</string>
    <string name="ble_user_guide_2">Turn on smart phone Bluetooth</string>
    <string name="ble_user_guide_3">Start KugooKirin APP go to add a vehicle</string>
    <string name="ble_user_guide_4">Search and connect vehicle</string>
    <string name="ble_user_guide_5">Input default password:000000</string>
    <string name="ble_user_guide_6">Vehicle connected successfully</string>
    <string name="block_failed">Block Failed</string>
    <string name="block_post">Block Post</string>
    <string name="block_post_title">Block This Post?</string>
    <string name="block_success">Block Success</string>
    <string name="block_user">Block User</string>
    <string name="block_user_title">Block This User?</string>
    <string name="blue">Blue</string>
    <string name="bluetooth_alert_connect_error1_message">"Wrong password. Please
re-enter your password"</string>
    <string name="bluetooth_alert_connect_error3_message">Please confirm you are connecting to your scooter.</string>
    <string name="bluetooth_dialog_info">default password:000000</string>
    <string name="bluetooth_dialog_title">Please enter the password</string>
    <string name="bluetooth_name">Bluetooth Name</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="brake_crank">刹把</string>
    <string name="brake_force">Brake Force</string>
    <string name="btn_send_no_toast">A message can not be empty.</string>
    <string name="button_apply">Apply(%1$d)</string>
    <string name="button_apply_default">Apply</string>
    <string name="button_back">Back</string>
    <string name="button_ok">OK</string>
    <string name="button_original">Original</string>
    <string name="button_preview">Preview</string>
    <string name="button_sure">Sure(%1$d)</string>
    <string name="button_sure_default">Sure</string>
    <string name="cancel">Cancel</string>
    <string name="change_background_color">Change Background Color</string>
    <string name="change_name_succeed">"Change Bluetooth's Name Successfully"</string>
    <string name="change_password">Change Password</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="charge_cycles">Charge cycles</string>
    <string name="check_email_hint">"The password has been sent to your
email address.Please check it."</string>
    <string name="check_email_info">"Please check your email
 and follow the instructions
 provided within."</string>
    <string name="check_email_tips">Password reset link sent</string>
    <string name="check_email_title">Check your email</string>
    <string name="check_info_checking">Is Checking</string>
    <string name="check_info_start">Start</string>
    <string name="checking">Checking</string>
    <string name="chip_text">Chip text</string>
    <string name="circle_image_preview_error_toast_1">Download Error</string>
    <string name="circle_image_preview_error_toast_2">The image can not be desplayed.</string>
    <string name="circle_image_preview_error_toast_3">Network error, download failed.</string>
    <string name="circle_image_preview_error_toast_4">The image is too large to be displayed</string>
    <string name="circle_image_preview_error_toast_5">Unknown Error</string>
    <string name="circle_publier_btn">Release</string>
    <string name="circle_publier_text_hint">Share your cycling trends!</string>
    <string name="circle_publier_title">Share</string>
    <string name="circle_video_title">Video</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="code_error">Error</string>
    <string name="code_success">Success</string>
    <string name="com_facebook_device_auth_instructions">Visit &lt;b>facebook.com/device&lt;/b> and enter the code shown above.</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading…</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_continue">Continue with Facebook</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_smart_device_instructions">To connect your account, open the Facebook app on your mobile device and check for notifications.</string>
    <string name="com_facebook_smart_device_instructions_or">- OR -</string>
    <string name="com_facebook_smart_login_confirmation_cancel">Not you?</string>
    <string name="com_facebook_smart_login_confirmation_continue_as">Continue as %1$s</string>
    <string name="com_facebook_smart_login_confirmation_title">Confirm Login</string>
    <string name="com_facebook_tooltip_default">"You're in control - choose what info you want to share with apps."</string>
    <string name="com_profile_content" />
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="confirm_new_password">Confirm Password</string>
    <string name="delete">Delete</string>
    <string name="delete_nfc_card_warn">Are you sure to delete the current card?</string>
    <string name="delete_vehicle">Delete Vehicle</string>
    <string name="delete_vehicle_tip">"After deletion, the vehicle will be 
removed from the list.
Are you sure to delete?"</string>
    <string name="enter_new_password">New Password</string>
    <string name="enter_old_password">Original Password</string>
    <string name="friends_visible">Friends visible</string>
    <string name="new_pwd">New Password</string>
    <string name="ok">OK</string>
    <string name="old_password">Old Password</string>
    <string name="open_hint">Visible to all</string>
    <string name="personal_female">Female</string>
    <string name="personal_male">Male</string>
    <string name="setting_new_pwd">Change Bluetooth Password</string>
    <string name="setting_startup_non_zero_info">Push-Startup：Thrust against the ground to start up</string>
    <string name="setting_startup_zero_info">Zero-Startup：Press the accelerator to start up</string>
    <string name="sex_secret">Secret</string>
    <string name="step_1">Step 1</string>
    <string name="step_2">Step 2</string>
    <string name="step_3">Step 3</string>
    <string name="step_4">Step 4</string>
    <string name="step_5">Step 5</string>
    <string name="step_6">Step 6</string>
    <string name="txt_friend_hint">Visible only to added friends</string>
    <string name="txt_open">Open</string>
    <string name="txt_private">Private</string>
    <string name="txt_private_hint">Visible only to yourself</string>
    <string name="user_guide">User Guide</string>
</resources>