<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:background="@drawable/image_dialog_bg" android:padding="8.0dip" android:layout_width="320.0dip" android:layout_height="wrap_content">
        <TextView android:textSize="16.0sp" android:textColor="@color/text_color" android:gravity="center" android:id="@id/personal_male" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_marginBottom="1.0dip" android:text="@string/personal_male" />
        <View android:background="@color/color_setting_view" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginLeft="@dimen/x5" android:layout_marginRight="@dimen/x5" />
        <TextView android:textSize="16.0sp" android:textColor="@color/text_color" android:gravity="center" android:id="@id/personal_female" android:layout_width="fill_parent" android:layout_height="50.0dip" android:text="@string/personal_female" />
        <View android:background="@color/color_setting_view" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" />
        <TextView android:textSize="16.0sp" android:textColor="@color/text_color" android:gravity="center" android:id="@id/gender_secret" android:layout_width="fill_parent" android:layout_height="50.0dip" android:text="@string/sex_secret" />
    </LinearLayout>
    <TextView android:textSize="16.0sp" android:textColor="@color/text_color" android:gravity="center" android:id="@id/dialog_cancel" android:background="@drawable/image_dialog_bg" android:layout_width="320.0dip" android:layout_height="50.0dip" android:layout_marginTop="10.0dip" android:text="@string/cancel" />
</LinearLayout>
