<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <include layout="@layout/layout_top_back" />
    <LinearLayout android:orientation="vertical" android:id="@id/change_pwd_layout" android:padding="@dimen/x5" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/x5" android:layout_marginRight="@dimen/x5" android:layout_marginHorizontal="@dimen/x5">
        <EditText android:textColor="@color/text_color" android:textColorHint="@color/text_gray" android:id="@id/old_pwd_et" android:background="@null" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/old_password" android:maxLines="1" android:inputType="textPassword" />
        <EditText android:textColor="@color/text_color" android:textColorHint="@color/text_gray" android:id="@id/new_pwd_et" android:background="@null" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/x10" android:hint="@string/new_pwd" android:maxLines="1" android:inputType="textPassword" />
        <EditText android:textColor="@color/text_color" android:textColorHint="@color/text_gray" android:id="@id/confirm_pwd_et" android:background="@null" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/x10" android:hint="@string/confirm_new_password" android:maxLines="1" android:inputType="textPassword" />
    </LinearLayout>
    <Button android:id="@id/summit_btn" android:layout_marginLeft="@dimen/x20" android:layout_marginTop="@dimen/x5" android:layout_marginRight="@dimen/x20" android:text="@string/ok" android:layout_marginHorizontal="@dimen/x20" style="@style/rounded_main_color_button" />
</LinearLayout>
